fix to spacing of li

--- a/css/style.css
+++ b/css/style.css
@@ -85,15 +85,11 @@ nav ul li a {
   position: fixed;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   z-index: 9;
   list-style-type: none;
   background-color: light-dark(aliceblue, #00002e);
-}
-
-.mobilenav li {
-  padding: 3rem;
 }
 
 header { 
